<resources>
    <string name="app_name">SpotifyClone</string>
    <string name="hello_blank_fragment">Xin chào blank fragment</string>
    <string name="dummy_button">Nút mẫu</string>
    <string name="dummy_content">NỘI DUNG\nMẪU</string>
    <string name="all_results1">Tất cả kết quả</string>
    <string name="email_or_username">Email hoặc tên người dùng</string>
    <string name="forgot_your_password">Quên mật khẩu</string>
    <string name="Back">Quay lại</string>
    <string name="sign_in_with_facebook">Đăng nhập bằng Facebook</string>
    <string name="sign_in_with_google">Đăng nhập bằng Google</string>
    <string name="log_in">Đăng nhập</string>
    <string name="client_id">852149445936-52iej16juv24qafjsg3n3vu41n5of36h.apps.googleusercontent.com</string>
    <string name="facebook_app_id">576052045431275</string>
    <string name="facebook_client_token">154c501250c48510ad2780cd2140982a</string>
    <string name="start_title">Hàng triệu bài hát. Miễn phí trên Spotify</string>
    <string name="login_here">Đăng nhập tại đây</string>
    <string name="sign_up_free">Đăng ký miễn phí</string>
    <string name="continue_with_google">Tiếp tục với Google</string>
    <string name="add_button_description">Thêm vào danh sách phát</string>
    <string name="download_description">Tải xuống</string>
    <string name="like_description">Thích</string>
    <string name="more_option_description">Tùy chọn khác</string>
    <string name="shuffle_button_description">Nút phát ngẫu nhiên</string>
    <string name="play_button_description">Phát</string>
    <string name="genre_display_text">thể loại</string>
    <string name="email_password"><![CDATA[Bước 1: Nhập Email & Mật khẩu]]></string>
    <string name="next">Tiếp theo</string>
    <string name="email">Email</string>
    <string name="choose_username">Bước 2: Chọn tên người dùng</string>
    <string name="username">Tên người dùng</string>
    <string name="add_a_profile_picture">Thêm ảnh đại diện</string>
    <string name="help_you_friends_recognize_you">Giúp bạn bè nhận ra bạn</string>
    <string name="choose_from_gallery">Chọn từ thư viện</string>
    <string name="take_a_photo">Chụp ảnh</string>
    <string name="take_photo">Chụp ảnh</string>
    <string name="when_s_your_birthday">Sinh nhật của bạn là khi nào?</string>
    <string name="your_birthday_won_t_be_shown_publicly_we_use_it_to_personalize_your_experience">Sinh nhật của bạn sẽ không được hiển thị công khai. Chúng tôi dùng nó để cá nhân hóa trải nghiệm của bạn.</string>
    <string name="_continue">Tiếp tục</string>
    <string name="profile_setup">Thiết lập hồ sơ</string>
    <string name="create_a_username">Tạo tên người dùng</string>
    <string name="don_t_have_an_account_sign_up">Chưa có tài khoản? <u>Đăng ký</u></string>
    <string name="log_in_underline"><u>Đăng nhập</u></string>
    <string name="skip_for_now"><u>Bỏ qua bây giờ</u></string>
    <string name="didn_t_receive_a_code_resend">Không nhận được mã? <u>Gửi lại</u></string>
    <string name="albums_in_genre">Các album thuộc thể loại</string>
    <string name="search_text">Bạn muốn nghe gì</string>
    <string name="album_same_genre_string">Có thể bạn cũng thích</string>
    <string name="artist_string">Nghệ sĩ</string>
    <string name="follower_string">5.409 lượt lưu • 36phút</string>
    <string name="same_genre_album_string">Những album cùng thể loại</string>
    <string name="test">Đây là màn hình Đăng nhập được tạo cho mục đích kiểm tra</string>
    <string name="theme">Giao diện</string>
    <string name="language">Ngôn ngữ</string>
    <string name="notification">Thông báo</string>
    <string name="dark_mode">Chế độ tối</string>
    <string name="light_mode">Chế độ sáng</string>
    <string name="fler">người theo dõi</string>
    <string name="fl">Đang theo dõi</string>
    <string name="follow">Theo dõi</string>
    <string name="unfollow">Bỏ theo dõi</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="noActivity">Không có hoạt động nào gần đây</string>
    <string name="setting">Cài đặt</string>
    <string name="account">Tài khoản</string>
    <string name="account_information">Thông tin cá nhân</string>
    <string name="logout">Đăng xuất</string>
    <string name="logout_confirmation">Bạn có chắc muốn đăng xuất</string>
    <string name="yes">Đồng ý</string>
    <string name="no">Không đồng ý</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="general">Chung</string>
    <string name="notification_permission_title">Quyền thông báo</string>
    <string name="notification_permission_message">Ứng dụng này cần quyền thông báo để hoạt động đúng.</string>
    <string name="open_settings">Mở cài đặt</string>
    <string name="cancel">Hủy</string>
    <string name="notifications_disabled">Thông báo đã bị tắt</string>
    <string name="error_loading_profile">Lỗi tải dữ liệu người dùng</string>
    <string name="network_error">Mạng của bạn có vẫn đề</string>
    <string name="edit_profile">Chỉnh sửa hồ sơ</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="save">Lưu</string>
    <string name="name">Tên tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="post_by">Đăng bởi </string>
    <string name="monthly_listeners">NGƯỜI NGHE HÀNG THÁNG </string>
    <string name="dark_mode_description">Bật/tắt chế độ tối để trải nghiệm tốt hơn vào ban đêm</string>
    <string name="language_switch_description">Chuyển đổi giữa tiếng Anh và tiếng Việt</string>
    <string name="notification_toggle_description">Bật/tắt thông báo ứng dụng</string>
    <string name="logout_description">Đăng xuất tài khoản của bạn một cách an toàn</string>
    <string name="view_profile">Xem hồ sơ</string>
    <string name="free_account">Tài khoản miễn phí</string>
    <string name="premium_account">Tài khoản premium</string>
    <string name="go_premium">Nâng cấp lên premium</string>
    <string name="popular">Phổ biến</string>
    <string name="new_releases_popular">Bản phát hành mới phổ biến</string>
    <string name="see_more">Xem thêm</string>
    <string name="hide">Ẩn bớt</string>
    <string name="show_all">Hiện tất cả</string>
    <string name="view_discography">Xem danh sách đĩa nhạc</string>
    <string name="about">Giới thiệu</string>
    <string name="verified_artist">Nghệ sĩ đã xác minh</string>
    <string name="playlist_based_on_artist">Playlist dựa trên Nghệ sĩ</string>
    <string name="fans_also_like">Fan cũng thích</string>
    <string name="participant_text">Có sự tham gia của </string>
    <string name="add_to_liked_songs">Thêm vào Bài hát đã thích</string>
    <string name="add_to_playlist">Thêm vào danh sách phát</string>
    <string name="listen_without_ads">Nghe nhạc không quảng cáo</string>
    <string name="premium">Premium</string>
    <string name="add_to_queue">Thêm vào Danh sách chờ</string>
    <string name="go_to_album">Chuyển đến album</string>
    <string name="share">Chia sẻ</string>
    <string name="go_to_radio">Chuyển đến radio theo bài hát</string>
    <string name="view_song_credits">Xem thông tin ghi công của bài hát</string>
    <string name="show_spotify_code">Hiển thị mã Spotify</string>
    <string name="single">Đĩa đơn</string>
    <string name="artist_ranking">Nghệ sĩ</string>
    <string name="song_ranking">Bài hát</string>
    <string name="album_ranking">Album</string>
    <string name="release">Bản phát hành</string>
    <string name="single1">Đĩa đơn và Đĩa mở rộng</string>
    <string name="compilation">Tuyển tập</string>
    <string name="available_on">Có ở</string>
    <string name="you_may_also_like">Có thể bạn cũng thích</string>
    <string name="Search_all">Duyệt tìm tất cả</string>
    <string name="noSearchResult">Không tìm thấy kết quả nào</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="play_count">Lượt nghe</string>
    <string name="ranking">Bảng xếp hạng</string>
    <string name="individual_plan_term">₫0 cho 3 tháng, sau đó ₫59.000 mỗi tháng. Chỉ áp dụng nếu bạn chưa từng dùng thử Premium trước đây và đăng ký qua Spotify. Các ưu đãi qua Google Play có thể khác. Điều khoản áp dụng.</string>
    <string name="mini_plan_description">1 tài khoản Premium chỉ dùng trên di động • Nghe ngoại tuyến tối đa 30 bài hát trên 1 thiết bị • Thanh toán một lần • Chất lượng âm thanh cơ bản</string>
    <string name="individual_plan_description">1 tài khoản Premium • Hủy bất kỳ lúc nào • Đăng ký hoặc thanh toán một lần</string>
    <string name="student_plan_description">1 tài khoản Premium đã xác minh • Giảm giá cho sinh viên đủ điều kiện • Hủy bất kỳ lúc nào • Đăng ký hoặc thanh toán một lần</string>
    <string name="student_plan_term">₫29.500 cho 2 tháng, sau đó ₫29.500 mỗi tháng. Chỉ áp dụng cho sinh viên đủ điều kiện. Điều khoản áp dụng.</string>
    <string name="premium_subscription_title">Nghe nhạc không giới hạn. Dùng thử 3 tháng Premium Individual với giá ₫0 trên Spotify.</string>
    <string name="get_started">BẮT ĐẦU NGAY</string>
    <string name="why_join_premium">Tại sao nên tham gia Premium?</string>
    <string name="ad_free_music_listening">Nghe nhạc không có quảng cáo</string>
    <string name="download_to_listen_offline">Tải xuống để nghe ngoại tuyến</string>
    <string name="play_songs_in_any_order">Phát bài hát theo thứ tự bất kỳ</string>
    <string name="high_audio_quality">Chất lượng âm thanh cao</string>
    <string name="organize_listening_queue">Sắp xếp hàng đợi phát</string>
    <string name="playlist">Danh sách phát</string>
    <string name="or">Hoặc</string>
    <string name="new_playlist">Danh sách phát mới</string>
    <string name="done">Xong</string>
    <string name="about_artist">Giới thiệu về nghệ sĩ</string>
    <string name="lyrics">Lời bài hát</string>
    <string name="queue">Danh sách chờ</string>
    <string name="now_playing_playlist">Đang phát: Tên Playlist</string>
    <string name="song_title">Tên bài hát</string>
    <string name="artist_name">Tên nghệ sĩ</string>
    <string name="name_your_playlist">Đặt tên cho danh sách phát của bạn</string>
    <string name="create">Tạo</string>
    <string name="edit_playlist">Chỉnh sửa Playlist</string>
    <string name="change_image">Thay đổi hình ảnh</string>
    <string name="add_description">Thêm phần mô tả</string>
    <string name="enter_description">Nhập mô tả</string>
    <string name="no_ads_music">Nghe nhạc không quảng cáo</string>
    <string name="premium_tag">Premium</string>
    <string name="hide_song">Ẩn bài hát</string>
    <string name="access_radio">Truy cập radio</string>
    <string name="go_to_artist">Chuyển đến nghệ sĩ</string>
    <string name="go_to_concert">Chuyển đến buổi biểu diễn của nghệ sĩ</string>
    <string name="confirm_payment_title">Xác nhận thanh toán</string>
    <string name="plan_name_premium_individual">Premium Cá nhân</string>
    <string name="plan_details_promo">₫0 cho 3 tháng đầu, sau đó ₫59.000/tháng</string>
    <string name="search_text1">Tìm kiếm bất kỳ điều gì</string>
    <string name="press_to_speak">Press to speak</string>
    <string name="view_all_results">View all search results here</string>
    <string name="back">Quay lại</string>
    <string name="price_student_intro">₫29.500 cho 2 tháng</string>
    <string name="premium_student_title">Gói Premium Sinh viên</string>
    <string name="price_student">₫29.500</string>
    <string name="duration_student">CHO 2 THÁNG</string>
    <string name="features_student">1 tài khoản Premium đã xác minh • Giảm giá cho sinh viên đủ điều kiện • Hủy bất kỳ lúc nào • Đăng ký hoặc thanh toán một lần</string>
    <string name="button_try_student">DÙNG 2 THÁNG VỚI ₫29.500</string>
    <string name="terms_student">₫29.500 cho 2 tháng, sau đó ₫29.500 mỗi tháng. Chỉ áp dụng cho sinh viên đủ điều kiện. Có điều khoản đi kèm.</string>
</resources>