<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--recycler view-->
    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#6666"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:fontFamily="@font/avenir_next"
        android:textSize="12sp"
        android:hint="@string/search_text1"
        android:padding="2dp"
        android:textColor="@color/text_color"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:id="@+id/search_by_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_to_speak" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        android:fillViewport="true"
        android:descendantFocusability="blocksDescendants">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/noResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/noSearchResult" />

            <Button
                android:id="@+id/allresult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/view_all_results" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
